updated after realising theres no need to have a seperate crypto table
